--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "firebase": "^10.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -37,7 +40,9 @@
   },
   "packageManager": "yarn@4.1.1",
   "devDependencies": {
+    "@babel/preset-react": "^7.24.1",
     "@craco/craco": "^7.1.0",
+    "@emotion/babel-plugin": "^11.11.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@types/eslint": "^8",
     "@types/testing-library__jest-dom": "^6.0.0",
